<resources>
    <string name="app_name" translatable="false">labLogin</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_account">Create account</string>
    <string name="sign_in">Sign In</string>
    <string name="config">Config</string>
    <string name="about">About</string>
    <string name="register">Register</string>
    <string name="sing_in">Sing In</string>
    <string name="logo">Logo</string>
    <string name="user">User</string>
    <string name="pass">Pass</string>
    <string name="save">save</string>
    <string name="name">Name</string>
    <string name="exit">Exit</string>
</resources>