<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        />

    <ImageView
        android:id="@+id/ivUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/user"
        app:layout_constraintBottom_toBottomOf="@+id/etName"
        app:layout_constraintTop_toTopOf="@+id/etName"
        app:layout_constraintEnd_toStartOf="@+id/etName"
        />
    <ImageView
        android:id="@+id/ivPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/key"
        app:layout_constraintTop_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toStartOf="@+id/etPassword"
        app:layout_constraintBottom_toBottomOf="@+id/etPassword"
        />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        android:width="300dp"

        android:height="48dp"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:width="300dp"
        android:height="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/etName"
/>
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        android:textColor="#000000"
        android:text="save"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbSave"
        android:layout_marginTop="10dp"
        android:width="350dp"
        app:cornerRadius="30dp"
        />
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        />



    <TextView
        android:id="@+id/textGotoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        app:layout_constraintTop_toBottomOf="@+id/btSing"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:textStyle="bold"
        android:textSize="20sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>